[tool.poetry]
name = "aptos-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aptos_python"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
